--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,7 @@
             <a href="{{ site.baseurl }}/CV">CV</a>
             <a href="{{ site.baseurl }}/research">Research</a>
             <a href="{{ site.baseurl }}/teaching_comm">Teaching</a>
+            <a href="{{ site.baseurl }}/teaching_comm">Science Communication</a>
             <a href="{{ site.baseurl }}/pianist">Pianist</a>
 
 
