--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/CV">CV</a>
             <a href="{{ site.baseurl }}/research">Research</a>
-            <a href="{{ site.baseurl }}/teaching_comm">Teaching \& Communication</a>
+            <a href="{{ site.baseurl }}/teaching_comm">Teaching & Communication</a>
             <a href="{{ site.baseurl }}/pianist">Pianist</a>
 
 
