--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,11 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/CV">CV</a>
             <a href="{{ site.baseurl }}/research">Research</a>
             <a href="{{ site.baseurl }}/teaching_comm">Teaching & Communication</a>
             <a href="{{ site.baseurl }}/pianist">Pianist</a>
+            <a href="github.com/hwaymentsteele/HWaymentSteele.github.io/master/images/HWS_CV_2017.pdf">CV</a>
+
 
 
           </nav>
