--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
             <a href="{{ site.baseurl }}/teaching_comm">Teaching & Communication</a>
             <a href="{{ site.baseurl }}/pianist">Pianist</a>
             <a href="{{ site.baseurl }}/images/HWS_CV_2017.pdf">CV</a>
-            <a href="{{ site.baseurl }}/writing">Writings</a>
+            <a href="{{ site.baseurl }}/writing.html">Writings</a>
 
 
 
