--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,11 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/research">Research</a>
-            <a href="{{ site.baseurl }}/teaching_comm">Teaching</a>
+            <a href="{{ site.baseurl }}/research">Researcher</a>
+            <a href="{{ site.baseurl }}/teaching_comm">Teacher</a>
             <a href="{{ site.baseurl }}/pianist">Pianist</a>
+            <a href="{{ site.baseurl }}/writing">Writer</a>
             <a href="{{ site.baseurl }}/images/HWS_CV_2017.pdf">CV</a>
-            <a href="{{ site.baseurl }}/writing">Writings</a>
 
 
 
