--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,10 +27,10 @@
           </div>
 
           <nav>
-            <a href="{{ site.baseurl }}/research">Researcher</a>
-            <a href="{{ site.baseurl }}/teaching_comm">Teacher</a>
+            <a href="{{ site.baseurl }}/research">Research</a>
+            <a href="{{ site.baseurl }}/teaching_comm">Teaching</a>
             <a href="{{ site.baseurl }}/pianist">Pianist</a>
-            <a href="{{ site.baseurl }}/writing">Writer</a>
+            <a href="{{ site.baseurl }}/writing">Writing</a>
             <a href="{{ site.baseurl }}/images/HWS_CV_2019.pdf">CV</a>
 
 
