--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/research">Research</a>
             <a href="{{ site.baseurl }}/teaching_comm">Teaching</a>
-            <a href="{{ site.baseurl }}/pianist">Pianist</a>
+            <a href="{{ site.baseurl }}/pianist">Other</a>
             <a href="{{ site.baseurl }}/writing">Writing</a>
             <a href="{{ site.baseurl }}/images/HWS_CV_2019.pdf">CV</a>
 
