--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
  #           <a href="{{ site.baseurl }}/teaching_comm">Teaching</a>
  #           <a href="{{ site.baseurl }}/pianist">Other</a>
  #           <a href="{{ site.baseurl }}/writing">Writing</a>
-            <a href="{{ site.baseurl }}/images/HWS_CV_2020.pdf">CV</a>
+            <a href="{{ site.baseurl }}/images/WaymentSteele_Feb2020_CV.pdf">CV</a>
 
 
 
