--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,11 +27,15 @@
           </div>
 
           <nav>
-            <a href="https://scholar.google.com/citations?hl=en&user=MHNfkuUAAAAJ&view_op=list_works&sortby=pubdate">Google Scholar</a>
+            <a href="https://scholar.google.com/citations?hl=en&user=MHNfkuUAAAAJ&view_op=list_works&sortby=pubdate">Research</a>
+            
+            <!
  #           <a href="{{ site.baseurl }}/research">Research</a>
  #           <a href="{{ site.baseurl }}/teaching_comm">Teaching</a>
  #           <a href="{{ site.baseurl }}/pianist">Other</a>
  #           <a href="{{ site.baseurl }}/writing">Writing</a>
+            
+            >
             <a href="{{ site.baseurl }}/images/WaymentSteele_Feb2020_CV.pdf">CV</a>
 
 
