--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           </div>
 
           <nav>
-            <a href="https://scholar.google.com/citations?hl=en&user=MHNfkuUAAAAJ&view_op=list_works&sortby=pubdate">Research</a>
+            <a href="{{ site.baseurl }}/research.md">Research</a>
            
             <a href="{{ site.baseurl }}/images/HWaymentSteele_CV_Oct2021.pdf">CV</a>
 
