--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,8 @@
             <a href="{{ site.baseurl }}/research/">Research</a>
            
             <a href="{{ site.baseurl }}/images/CV_Janetzko_Fall2022.pdf">CV</a>
+            
+            <a href="{{ site.baseurl }}/research/">Cycling</a>
 
 
 
