--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,8 @@
 
           <nav>
             <a href="{{ site.baseurl }}/research/">Research</a>
+            
+            <a href="{{ site.baseurl }}/writing/">Blog</a>
            
             <a href="{{ site.baseurl }}/images/CV_Janetzko_winter2023.pdf">CV</a>
             
