--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,6 +39,8 @@
             <a href="{{ site.baseurl }}/research/">Research</a>
             
             <a href="{{ site.baseurl }}/writing/">Blog</a>
+            
+            <a href="{{ site.baseurl }}/writing/">Team</a>
            
             <a href="{{ site.baseurl }}/images/CV_Janetzko_winter2023.pdf">CV</a>
             
