--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
             
             <a href="{{ site.baseurl }}/writing/">Blog</a>
             
-            <a href="{{ site.baseurl }}/writing/">Team</a>
+            <a href="{{ site.baseurl }}/team/">Team</a>
            
             <a href="{{ site.baseurl }}/images/CV_Janetzko_winter2023.pdf">CV</a>
             
