--- a/_includes/module.html
+++ b/_includes/module.html
@@ -1,6 +1,6 @@
 <div style="clear: both;">
-  <div style="float: left; margin-right 1em;">
-    <img src="{{ include.image_path }}" width = "200" height = "200" alt="">
+  <div style="float: right; margin-right 1em;">
+    <img src="{{ include.image_path }}" width = "30%" alt="">
   </div>
   <div>
     <h2>{{ include.title }}</h2>
