--- a/_includes/module.html
+++ b/_includes/module.html
@@ -1,5 +1,5 @@
 <div style="clear: both;">
-  <div style="float: right; margin-right 1em;">
+  <div style="float: right; margin-left 1em;">
     <img src="{{ include.image_path }}" width = "30%" alt="">
   </div>
   <div>
