--- a/_includes/module.html
+++ b/_includes/module.html
@@ -1,9 +1,9 @@
 <div style="clear: both;">
-  <div style="float: right; margin-left 1em;">
-    <img src="{{ include.image_path }}" width = "30%" alt="">
-  </div>
   <div>
     <h2>{{ include.title }}</h2>
     {{ include.description | markdownify }}
+  </div>
+  <div style="float: right; margin-right 1em;">
+    <img src="{{ include.image_path }}" width = "30%" alt="">
   </div>
 </div>
