--- a/_includes/module.html
+++ b/_includes/module.html
@@ -3,7 +3,7 @@
     <h2>{{ include.title }}</h2>
     {{ include.description | markdownify }}
   </div>
-  <div style="float: right; margin-right 1em;">
+  <div style="float: right;">
     <img src="{{ include.image_path }}" width = "40%" alt="">
   </div>
 </div>
