--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@
             
             <a href="{{ site.baseurl }}/team/">Team</a>
             
-            <a href="{{ site.baseurl }}/pubs/">Pubs</a>
+            <a href="{{ site.baseurl }}/publications/">Pubs</a>
            
             <a href="{{ site.baseurl }}/images/CV_Janetzko_winter2023.pdf">CV</a>
             
